--- a/data/style.css
+++ b/data/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #333;
+    background: rgb(73, 73, 73);
     margin: 0px;
     padding: 0px;
 }
@@ -42,7 +42,6 @@ img {
     max-width: 100%;
     border-radius: 70px;
     filter: brightness(0.85); 
-    /* box-shadow: 10px 10px 10px 10px white; */
 } 
 
 
@@ -57,4 +56,16 @@ img {
     display: flex;
     flex-flow: wrap row;
     justify-content: space-around;
+}
+
+a {
+    text-decoration: none;
+}
+
+footer{
+    background: rgb(73, 73, 73);
+    text-align: center;
+    clear: both;
+    position: relative;
+    height: 40px;
 }
