--- a/data/style.css
+++ b/data/style.css
@@ -1,3 +1,8 @@
+* {
+    margin:0;
+    padding:0;
+    }
+
 body {
     font-family: 'Noto Sans JP', sans-serif;
     background: rgb(73, 73, 73);
@@ -16,7 +21,11 @@ header {
     font-family: cursive;
     color:white;
     width:100%;
-    background: rgb(73, 73, 73);
+    background: #85E3FF;
+}
+
+header button {
+    background: #85E3FF;
 }
 
 header a {
@@ -38,7 +47,7 @@ header .searchbar {
 	border: none;
 	border-bottom: 1px solid white;
 	color: white;
-	background: rgb(73, 73, 73) 0% 0% no-repeat padding-box;
+	background: #386e9b 0% 0% no-repeat padding-box;
     font-size: 25px;
 }
 
@@ -60,25 +69,47 @@ h2 {
 }
 
 /* page index */
-.artistcliquable {
+
+#artistAndFilter {
+    display: flex;
+    flex-direction: row;
+}
+
+#filterPage {
+    display: none;
+    grid-template-columns: 1fr 1fr;
+    padding: 20px;
+    min-width: 170px;;
+    border-right: 3px solid #0089fa;
+    color: white;
+}
+
+#filterPage ul {
+    list-style:none;
+}
+
+#artistcliquable {
     background: #222222;
     display: flex;
     flex-flow: wrap row;
     justify-content: space-around;
 }
 
-.artistcliquable .cardArtist {
+#artistcliquable .cardArtist {
     margin: 15px;
     text-align: center;
 }
 
-.artistcliquable .cardArtist img {
+#artistcliquable .cardArtist img {
     margin: 0px;
     padding: 0px;
     max-width: 100%;
-    border-radius: 70px;
-    filter: brightness(0.85); 
+    border-radius: 70px; 
+    box-shadow: 0px 6px 12px #004ffa;
+    /* 00ffc8 */
+    /* 0089fa */
 }
+
 
 /* page artists */
 .content {
