--- a/data/style.css
+++ b/data/style.css
@@ -21,11 +21,11 @@ header {
     font-family: cursive;
     color:white;
     width:100%;
-    background: #85E3FF;
+    background: rgb(0,210,255);
 }
 
 header button {
-    background: #85E3FF;
+    background: rgb(0,210,255);
 }
 
 header a {
@@ -47,12 +47,12 @@ header .searchbar {
 	border: none;
 	border-bottom: 1px solid white;
 	color: white;
-	background: #386e9b 0% 0% no-repeat padding-box;
+	background: rgb(0,210,255) 0% 0% no-repeat padding-box;
     font-size: 25px;
 }
 
 footer{
-    background: rgb(73, 73, 73);
+    background: rgb(0,210,255);
     text-align: center;
     clear: both;
     position: relative;
@@ -76,16 +76,38 @@ h2 {
 }
 
 #filterPage {
+    border-right: 3px solid rgb(0,4,255);
+}
+
+#filterPage2 {
     display: none;
-    grid-template-columns: 1fr 1fr;
-    padding: 20px;
-    min-width: 170px;;
-    border-right: 3px solid #0089fa;
+    grid-template-columns: repeat(2, 1fr);
     color: white;
+}
+
+#filterPage .col1 {
+    grid-column: 1;
+    padding: 15px;
+}
+
+#filterPage .col2 {
+    grid-column: 2;
+    padding: 15px;
+}
+
+#filterPage p {
+    grid-column-start: 1;
+    grid-column-end: span col2-end;
+    text-align: center;
+    padding-top: 10px;
 }
 
 #filterPage ul {
     list-style:none;
+}
+
+#filterPage input {
+    max-width: 100%;
 }
 
 #artistcliquable {
@@ -105,7 +127,7 @@ h2 {
     padding: 0px;
     max-width: 100%;
     border-radius: 70px; 
-    box-shadow: 0px 6px 12px #004ffa;
+    box-shadow: 0px 6px 12px rgb(0,4,255);
     /* 00ffc8 */
     /* 0089fa */
 }
