--- a/data/style.css
+++ b/data/style.css
@@ -151,7 +151,7 @@ h2 {
     padding: 0px;
     max-width: 100%;
     border-radius: 70px; 
-    box-shadow: 0px 6px 12px rgb(0,4,255);
+    box-shadow: 0px 4px 8px white;
     /* 00ffc8 */
     /* 0089fa */
 }
