--- a/data/style.css
+++ b/data/style.css
@@ -8,7 +8,7 @@ body {
     background: rgb(73, 73, 73);
     margin: 0px;
     padding: 0px;
-    background-color: #222222;
+    background-color: #ffffff;
     width: 100%;
     padding-bottom: 35px;
 }
@@ -23,7 +23,7 @@ header {
     font-family: cursive;
     color:white;
     width:100%;
-    background: rgb(0,210,255);
+    background: #737dfe;
 }
 
 header #divLogo {
@@ -74,7 +74,7 @@ header #search {
 }
 
 footer{
-    background: rgb(0,210,255);
+    background: #737dfe;
     text-align: center;
     clear: both;
     position: fixed;
@@ -137,7 +137,7 @@ h2 {
 }
 
 #artistcliquable {
-    background: #222222;
+    background: #ffffff;
     display: flex;
     flex-flow: wrap row;
     justify-content: space-around;
@@ -145,19 +145,22 @@ h2 {
 }
 
 #artistcliquable .cardArtist {
-    margin: 15px;
     text-align: center;
+    background: linear-gradient(45deg, #ffcac9, #737dfe);
+    border-radius: 70px;
+    margin-bottom: 15px;
+    height: 90%;
 }
 
 #artistcliquable .cardArtist img {
-    margin: 0px;
-    padding: 0px;
     max-width: 100%;
     border-radius: 70px; 
-    box-shadow: 0px 4px 8px white;
-    /* 00ffc8 */
-    /* 0089fa */
 }
+
+#artistcliquable:hoover a{
+    background: gold;
+}
+
 
 /* page artists */
 .content {
@@ -203,4 +206,54 @@ h2 {
     color: rgb(255, 255, 255);
     text-align: center;
     padding-bottom: 2.5rem;
+}
+
+/* test hoover */
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap%22");
+
+.container {
+  max-width: 100vw;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 35px;
+  margin: 0 auto;
+  padding: 40px 0;
+}
+
+.card {
+  position: relative;
+  width: 300px;
+  height: 400px;
+  margin: 0 auto;
+  background: #000;
+  border-radius: 15px;
+  box-shadow: 0 15px 60px rgba(0, 0, 0, 0.5);
+}
+
+.face {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h2{
+  color: white;
+  font-size: 2em;
+}
+
+
+.card:hover .face.face2 {
+  height: 100px;
+  opacity: 0%;
+  transition: 0.5s;
+}
+
+.card .face.face2 {
+  background-image: linear-gradient(40deg, #fffc00 0%, #fc00ff 45%, #00fffc 100%);
+  border-radius: 15px;
 }
