--- a/data/style.css
+++ b/data/style.css
@@ -139,17 +139,24 @@ h2 {
 #artistcliquable {
     background: #ffffff;
     display: flex;
-    flex-flow: wrap row;
-    justify-content: space-around;
 
 }
 
 #artistcliquable .cardArtist {
+    width: 100px;
+    height: 100px;
     text-align: center;
     background: linear-gradient(45deg, #ffcac9, #737dfe);
     border-radius: 70px;
     margin-bottom: 15px;
-    height: 90%;
+
+}
+
+#artistcliquable .cardArtist:hover .face2{
+    height: 100px;
+    opacity: 0%;
+    transition: 0.5s;
+    border-radius: 70px;
 }
 
 #artistcliquable .cardArtist img {
@@ -157,8 +164,9 @@ h2 {
     border-radius: 70px; 
 }
 
-#artistcliquable:hoover a{
-    background: gold;
+#artistcliquable .cardArtist .face1 {
+    background: black;
+    border-radius: 70px;
 }
 
 
@@ -211,15 +219,6 @@ h2 {
 /* test hoover */
 @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap%22");
 
-.container {
-  max-width: 100vw;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 35px;
-  margin: 0 auto;
-  padding: 40px 0;
-}
-
 .card {
   position: relative;
   width: 300px;
@@ -230,30 +229,15 @@ h2 {
   box-shadow: 0 15px 60px rgba(0, 0, 0, 0.5);
 }
 
-.face {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-h2{
-  color: white;
-  font-size: 2em;
-}
-
-
 .card:hover .face.face2 {
   height: 100px;
   opacity: 0%;
   transition: 0.5s;
 }
 
-.card .face.face2 {
-  background-image: linear-gradient(40deg, #fffc00 0%, #fc00ff 45%, #00fffc 100%);
-  border-radius: 15px;
+.face {
+    width: 100px;
+    height: 100px;
+    top: 0;
+    left: 0;
 }
