--- a/data/style.css
+++ b/data/style.css
@@ -137,8 +137,13 @@ h2 {
 }
 
 #artistcliquable {
-    background: #ffffff;
-    display: flex;
+    position: relative;
+    max-width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 35px;
+    margin: 0 auto;
+    padding: 40px 0;
 
 }
 
@@ -167,6 +172,10 @@ h2 {
 #artistcliquable .cardArtist .face1 {
     background: black;
     border-radius: 70px;
+}
+
+#artistcliquable .cardArtist .face2 {
+
 }
 
 
@@ -236,8 +245,10 @@ h2 {
 }
 
 .face {
-    width: 100px;
-    height: 100px;
-    top: 0;
-    left: 0;
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+
 }
