--- a/data/index.css
+++ b/data/index.css
@@ -1,5 +1,3 @@
-/* page index */
-
 #artistAndFilter {
     display: flex;
     flex-direction: row;
@@ -11,38 +9,7 @@
     display: none;
 }
 
-#filterPage2 {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    color: white;
-}
-
-#filterPage .col1 {
-    grid-column: 1;
-    padding: 15px;
-}
-
-#filterPage .col2 {
-    grid-column: 2;
-    padding: 15px;
-}
-
-#filterPage p {
-    grid-column-start: 1;
-    grid-column-end: span col2-end;
-    text-align: center;
-    padding-top: 10px;
-}
-
-#filterPage ul {
-    list-style:none;
-}
-
-#filterPage input {
-    max-width: 100%;
-}
-
-#artistcliquable {
+#allCardArtist {
     position: relative;
     max-width: 100vw;
     display: grid;
@@ -54,41 +21,43 @@
 
 }
 
-#artistcliquable .cardArtist {
-     position: relative;
-      width: 250px;
-      height: 250px;
-      margin: 0 auto;
-      background: #000;
-      border-radius: 15px;
-      box-shadow: 0 15px 60px rgba(0, 0, 0, 0.5);
+#allCardArtist .cardArtist {
+    position: relative;
+    width: 250px;
+    height: 250px;
+    margin: 0 auto;
+    background: #000;
+    border-radius: 70px;
+    text-align: center;
 }
 
-#artistcliquable .cardArtist .face{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+#allCardArtist .cardArtist .face{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
 
-#artistcliquable .cardArtist:hover .face2{
+#allCardArtist .cardArtist:hover .face2{
     opacity: 0%;
     transition: 0.4s;
     border-radius: 70px;
 }
 
-#artistcliquable .cardArtist img {
+#allCardArtist .cardArtist img {
     max-width: 100%;
     border-radius: 70px; 
 }
 
-#artistcliquable .cardArtist .face1 {
+#allCardArtist .cardArtist .face1 {
     background: black;
     border-radius: 70px;
 }
+
+
