--- a/data/style.css
+++ b/data/style.css
@@ -73,7 +73,7 @@ header #search {
     font-size: 25px;
 }
 
-footer{
+/* footer{
     background: rgb(0,210,255);
     text-align: center;
     clear: both;
@@ -81,7 +81,7 @@ footer{
     bottom: 0;
     width:100%;
     height:30px;
-}
+} */
 
 a {
     text-decoration: none;
@@ -326,3 +326,92 @@ h2 {
       opacity: 0.5;
       font-weight: bolder;
     }
+
+
+    /* footer waves */
+@import url("https://fonts.googleapis.com/css?family=Lato:400,400i,700");
+
+body {
+  font-family: Lato, sans-serif;
+}
+
+footer {
+  width:100vw;
+  position:fixed;
+  bottom:0px;
+}
+footer div {
+  background-color:rgb(0,210,255);
+  margin: -5px 0px 0px 0px;
+  padding:0px;
+  color: #fff;
+  text-align:center;
+}
+
+svg {
+  width:100%;
+}
+.wave {
+  animation: wave 3s linear;
+  animation-iteration-count:infinite;
+  fill:rgb(0,210,255);
+}
+.drop {
+  fill: transparent;
+  animation: drop 5s ease infinite normal;
+  stroke:  rgb(2, 134, 163);
+  stroke-width:0.5;
+  opacity:.6; 
+  transform: translateY(80%);
+}
+.drop1 {
+  transform-origin: 20px 3px;
+}
+.drop2 {
+  animation-delay: 3s;
+  animation-duration:3s;
+  transform-origin: 25px 3px;
+}
+.drop3 {
+  animation-delay: -2s;
+  animation-duration:3.4s;
+  transform-origin: 16px 3px;
+}
+.gooeff {
+  	filter: url(#goo);
+}
+#wave2 {
+  animation-duration:5s;
+  animation-direction: reverse;
+  opacity: .6
+}
+#wave3 {
+  animation-duration: 7s;
+  opacity:.3;
+}
+@keyframes drop {
+  0% {
+    transform: translateY(80%); 
+    opacity:.6; 
+  }
+  80% {
+    transform: translateY(80%); 
+    opacity:.6; 
+  }
+  90% { 
+    transform: translateY(10%) ; 
+    opacity:.6; 
+  }
+  100% { 
+    transform: translateY(0%) scale(1.5);  
+    stroke-width:0.2;
+    opacity:0; 
+  }
+}
+@keyframes wave {
+  to {transform: translateX(-100%);}
+}
+@keyframes ball {
+  to {transform: translateY(20%);}
+}
+
