--- a/data/main.css
+++ b/data/main.css
@@ -1,18 +1,17 @@
 * {
     margin:0;
     padding:0;
-    color: white;
 }
 
 body {
     font-family: 'Noto Sans JP', sans-serif;
-    background: black;
+    background: #2A2A2E;
     width: 100%;
     padding-bottom: 35px;
 }
 
 footer{
-    background: #737dfe;
+    background: #9600FF;
     text-align: center;
     clear: both;
     position: fixed;
