--- a/data/artists.css
+++ b/data/artists.css
@@ -1,23 +1,21 @@
-
-
-.container{
-    width: 1000px;
+.AllCardInfos{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 
-.container .card{
+.AllCardInfos .OneCardInfos{
     position: relative;
     cursor: pointer;
 }
 
-.container .card .face{
+.AllCardInfos .OneCardInfos .BothCards{
     width: 300px;
     height: 200px;
     transition: 0.5s;
 }
 
-.container .card .face.face1{
+.AllCardInfos .OneCardInfos .BothCards.TopCard{
     position: relative;
     background: #333;
     display: flex;
@@ -27,29 +25,23 @@
     transform: translateY(100px);
 }
 
-.container .card:hover .face.face1{
-    background: linear-gradient(
-      115deg,
-      #00F5FB 10%,
-      #ff00e3 55%,
-      #fff100 80%
-    );
+.AllCardInfos .OneCardInfos:hover .BothCards.TopCard{
     transform: translateY(0);
 }
 
-.container .card .face.face1 .content{
+.AllCardInfos .OneCardInfos .BothCards.TopCard .Infos{
     transition: 0.5s;
 }
 
-.container .card:hover .face.face1 .content{
+.AllCardInfos .OneCardInfos:hover .BothCards.TopCard .Infos{
     opacity: 1;
 }
 
-.container .card .face.face1 .content img{
+.AllCardInfos .OneCardInfos .BothCards.TopCard .Infos img{
     max-width: 100px;
 }
 
-.container .card .face.face1 .content h3{
+.AllCardInfos .OneCardInfos .BothCards.TopCard .Infos h3{
     margin: 10px 0 0;
     padding: 0;
     color: rgb(255, 255, 255);
@@ -57,13 +49,11 @@
     font-size: 1.5em;
 }
 
-.container .card .face.face2{
-    min-height: 580px;
+.AllCardInfos .OneCardInfos .BothCards.BottomCard{
+    height: 400px;
+    overflow-y: scroll;
     position: relative;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background: #696969;
     padding: 20px;
     box-sizing: border-box;
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
@@ -71,31 +61,16 @@
     opacity: 0%;
 }
 
-.container .card:hover .face.face2{
+.AllCardInfos .OneCardInfos:hover .BothCards.BottomCard{
     transform: translateY(0);
     opacity: 100%;
 }
 
-.container .card .face.face2 .content p{
+.AllCardInfos .OneCardInfos .BothCards.BottomCard .Infos p{
     margin: 0;
     padding: 0;
 }
 
-.container .card .face.face2 .content a{
-    margin: 15px 0 0;
-    display:  inline-block;
-    text-decoration: none;
-    font-weight: 900;
-    color: #333;
-    padding: 5px;
-    border: 1px solid #333;
-}
-
-.container .card .face.face2 .content a:hover{
-    background: #333;
-    color: rgb(255, 255, 255);
-}
-
-.content {
-    color: black;
+.Infos {
+    color: white;
 }
