--- a/data/header.css
+++ b/data/header.css
@@ -1,162 +1,83 @@
 header {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 80px;
-    grid-gap: 10px;
-    text-align: center;
-    font-size : 50px;
-    font-family: cursive;
-    width:100%;
-    background: linear-gradient(
-      40deg,
-      #00fffc 0%,
-      #fc00ff 45%,
-      #fffc00 100%
-    );
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: 80px;
+	grid-gap: 10px;
+	text-align: center;
+	font-size: 50px;
+	font-family: cursive;
+	width: 100%;
+	background: linear-gradient( 40deg, #00fffc 0%, #fc00ff 45%, #fffc00 100%);
 }
 
 header #divLogo {
-    grid-column: 1;
-    grid-row: 1;
+	grid-column: 1;
+	grid-row: 1;
 }
 
 header #divLogo a {
-    text-align: left;
-    float: left;
-    padding-left: 20px;
+	text-align: left;
+	float: left;
+	padding-left: 20px;
 }
 
 header #divLogo #logoImage {
-    float: left;
-    max-height: 70px;
-    margin: 5px;
+	float: left;
+	max-height: 70px;
+	margin: 5px;
 }
 
 header #divLogo #filterImage {
-    float: left;
-    max-height: 70px;
-    margin: 5px;
-    cursor: pointer;
+	float: left;
+	max-height: 70px;
+	margin: 5px;
+	cursor: pointer;
 }
 
-/* seachbar */
+header #formSearchBar {
+	grid-column: 2;
+	grid-row: 1;
+	margin: auto;
+	background: #2f3640;
+	border-radius: 40px;
 
-@import url('https://fonts.googleapis.com/css?family=Inconsolata:700');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 }
 
-.container {
-  position: absolute;
-  margin: 0 auto;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 700px;
-  height: 80px;
+#loupe {
+	width: 56px;
 }
-  .search {
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 70px;
-    height: 70px;
-    background:rgb(58, 58, 58);
+
+/* #formSearchBar:hover > #searchInput {
+    width: 240px;
+    padding: 0 6px;
+}
+
+#formSearchBar:hover #loupe {
+	opacity: 0;
+} */
+
+.searchButton {
+    float: right;
+    width: 55px;
+    height: 55px;
     border-radius: 50%;
-    transition: all 1s;
-    z-index: 4;
-    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
-  }
-    .search::before {
-      content: "";
-      position: absolute;
-      margin: auto;
-      top: 22px;
-      right: 0;
-      bottom: 0;
-      left: 22px;
-      width: 12px;
-      height: 2px;
-      background: white;
-      transform: rotate(45deg);
-      transition: all .5s;
-    }
-    .search::after {
-      content: "";
-      position: absolute;
-      margin: auto;
-      top: -5px;
-      right: 0;
-      bottom: 0;
-      left: -5px;
-      width: 25px;
-      height: 25px;
-      border-radius: 50%;
-      border: 2px solid white;
-      transition: all .5s;
-    }
-  input {
-    font-family: 'Inconsolata', monospace;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 50px;
-    height: 50px;
-    outline: none;
-    border: none;
-    background: rgb(58, 58, 58);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s;
+	background: #2f3640;
+}
+
+#searchInput {
+    border:none;
+    background: none;
+    outline:none;
+    float:left;
+    padding: 0;
     color: white;
-    text-shadow: 0 0 10px rgb(58, 58, 58);
-    padding: 0 80px 0 20px;
-    border-radius: 30px;
-    box-shadow: 0 0 25px 0 rgb(58, 58, 58),
-                0 20px 25px 0 rgba(0, 0, 0, 0.2);
-    transition: all 1s;
-    opacity: 0;
-    z-index: 5;
-    font-weight: bolder;
-    letter-spacing: 0.1em;
-  }
-    :hover {
-      cursor: pointer;
-    }
-    :focus {
-      width: 300px;
-      opacity: 1;
-      cursor: text;
-    }
-    :focus ~ .search {
-      right: -250px;
-      background: #151515;
-      z-index: 6;
-    }
-      ::focus.search::before {
-        top: 0;
-        left: 0;
-        width: 25px;
-      }
-      ::focus.search::after {
-        top: 0;
-        left: 0;
-        width: 25px;
-        height: 2px;
-        border: none;
-        background: white;
-        border-radius: 0%;
-        transform: rotate(-45deg);
-      }
-    ::placeholder {
-      color: white;
-      opacity: 0.5;
-      font-weight: bolder;
-    }
+    font-size: 16px;
+    transition: 0.4s;
+    line-height: 55px;
+    width: 0px;
+
+}
