--- a/data/artists.css
+++ b/data/artists.css
@@ -7,6 +7,7 @@
 .AllCardInfos .OneCardInfos{
     position: relative;
     cursor: pointer;
+    padding: 80px;
 }
 
 .AllCardInfos .OneCardInfos .BothCards{
@@ -58,7 +59,7 @@
     box-sizing: border-box;
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
     transform: translateY(-100px);
-    opacity: 0%;
+    opacity: 0%;  
 }
 
 .AllCardInfos .OneCardInfos:hover .BothCards.BottomCard{
